--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,34 +29,32 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - uses: actions/checkout@v3
-      - run: touch ./src/main/resources/application.yml
-      - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
-      - run: cat ./src/main/resources/application.yml
+      #      - uses: actions/checkout@v3
+      #      - run: touch ./src/main/resources/application.yml
+      #      - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
+      #      - run: cat ./src/main/resources/application.yml
 
 
-      - uses: mirromutth/mysql-action@v1.1
-        with:
-          host port: 3306
-          container port: 3306
-          mysql database: ${{ secrets.DB_NAME }}
-          mysql root password: ${{ secrets.DB_PASSWORD }}
+      #      - uses: mirromutth/mysql-action@v1.1
+      #        with:
+      #          host port: 3306
+      #          container port: 3306
+      #          mysql database: ${{ secrets.DB_NAME }}
+      #          mysql root password: ${{ secrets.DB_PASSWORD }}
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
 
       - name: Build with Gradle
-        run: |
-          echo ======= execute build =======
-          ./gradlew build
+        run: ./gradlew build
         shell: bash
 
-      - name: Test with Gradle
-        run: |
-          echo ======= execute Test =======
-          ./gradlew test
-        shell: bash
+        #      - name: Test with Gradle
+        #        run: |
+        #          echo ======= execute Test =======
+        #          ./gradlew test
+        #        shell: bash
         
 
 
