--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -13,8 +6,10 @@ on:
   pull_request:
     branches: [ "develop", "main" ]
 
-permissions:
-  contents: read
+# permissions.contents: read option은 workflow가 repository 혹은 file 내용에 대해서 읽기 권한을 부여하는 옵션입니다.
+# repository 혹은 특정 파일에 접근할 필요가 없기 때문에 주석 처리합니다.
+#permissions:
+#  contents: read
 
 jobs:
   build:
@@ -29,19 +24,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      #      - uses: actions/checkout@v3
-      #      - run: touch ./src/main/resources/application.yml
-      #      - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
-      #      - run: cat ./src/main/resources/application.yml
-
-
-      #      - uses: mirromutth/mysql-action@v1.1
-      #        with:
-      #          host port: 3306
-      #          container port: 3306
-      #          mysql database: ${{ secrets.DB_NAME }}
-      #          mysql root password: ${{ secrets.DB_PASSWORD }}
-
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
         shell: bash
@@ -49,12 +31,6 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
         shell: bash
-
-        #      - name: Test with Gradle
-        #        run: |
-        #          echo ======= execute Test =======
-        #          ./gradlew test
-        #        shell: bash
         
 
 
