[None] refactor: restdocs 관련 build.gradle 파일 변경, 주석 추가

--- a/build.gradle
+++ b/build.gradle
@@ -12,26 +12,12 @@ java {
 group = 'study'
 version = '0.0.1-SNAPSHOT'
 
-
-ext {
-    snippetsDir = file('build/generated-snippets')
-}
-
-
-// bootJar은 실행가능한 jar을 빌드하는 테스크이다.
-bootJar {
-    dependsOn asciidoctor
-    copy {
-        from "${asciidoctor.outputDir}"
-        into 'BOOT-INF/classes/static/docs'
-    }
-}
-
-
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    // asciidoctor extension에 대한 설정을 넣어준다.
+    asciidoctorExt
 }
 
 repositories {
@@ -48,37 +34,45 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     implementation 'mysql:mysql-connector-java:8.0.23'
-
 }
 
 
+// ext: build.gradle에서 사용하는 전역 변수를 정의하는 부분
+ext {
+    // 전역 변수로 snippet을 저장할 directory를 설정한다.
+    snippetsDir = file('build/generated-snippets')
+}
+
 test {
+    // test가 끝난 결과물을 snippetsDir에 저장한다.
     outputs.dir snippetsDir
 }
 
 asciidoctor {
     dependsOn test
     inputs.dir snippetsDir
+    configurations 'asciidoctorExt'
+
+    // test -> asciidoctor 순으로 테스크가 수행된다.
+    dependsOn test
+
 }
 
-asciidoctor.doFirst {
-    delete file('src/main/resources/static/docs')
-}
-
-task copyDocument(type: Copy) {
+// bootJar: 실행 가능한 *.jar 파일을 만드는 역할을 수행한다.
+bootJar {
+    // test -> asciidoctor -> bootJar 순으로 task가 수행된다.
     dependsOn asciidoctor
-    from file("build/docs/asciidoc")
-    into file("src/main/resources/static/docs")
+
+    // asciidoctor.outputDir: '/build/docs/asciidocs'
+    from("${asciidoctor.outputDir}") {
+        // asciidoctor.outputDir 폴더에 있는 파일을
+        into 'static/docs'
+    }
 }
 
 test {
     useJUnitPlatform()
 }
-
-build {
-    dependsOn copyDocument
-}
-
 
 
 
