--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,20 @@ plugins {
     id 'org.springframework.boot' version '3.1.4'
     id 'io.spring.dependency-management' version '1.1.3'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
+    id "jacoco"
+}
+
+ext {
+    snippetsDir = file('build/generated-snippets') // 전역 변수로 snippet을 저장할 directory를 설정한다.
 }
 
 java {
     sourceCompatibility = '17'
+}
+
+jacoco {
+    toolVersion "0.8.9"
+    reportsDirectory = layout.buildDirectory.dir("reports/jacoco")
 }
 
 group = 'study'
@@ -16,8 +26,7 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
-    // asciidoctor extension에 대한 설정을 넣어준다.
-    asciidoctorExt
+    asciidoctorExt // asciidoctor extension에 대한 설정을 넣어준다.
 }
 
 repositories {
@@ -37,15 +46,46 @@ dependencies {
 }
 
 
-// ext: build.gradle에서 사용하는 전역 변수를 정의하는 부분
-ext {
-    // 전역 변수로 snippet을 저장할 directory를 설정한다.
-    snippetsDir = file('build/generated-snippets')
-}
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            enabled = true
+            element = 'CLASS'
 
-test {
-    // test가 끝난 결과물을 snippetsDir에 저장한다.
-    outputs.dir snippetsDir
+            limit {
+                counter = 'LINE'
+                value = 'COVEREDRATIO'
+                minimum = 0.60
+            }
+
+            excludes = [
+                    '*.*Application',
+                    '*.*ExceptionHandler',
+                    '**.util.**'
+            ]
+        }
+    }
+}
+jacocoTestReport {
+    dependsOn test
+    reports {
+        html.required = true
+        html.destination file("${layout.buildDirectory}/jacoco/index.html")
+    }
+    afterEvaluate {
+        classDirectories.setFrom(
+                files(classDirectories.files.collect {
+                    fileTree(dir: it, excludes: [
+                            '**/*Application*',
+                            '**/*Exception*',
+                            '**/request/**',
+                            '**/response/**',
+                            '**/util/**'
+                    ])
+                })
+        )
+    }
+
 }
 
 asciidoctor {
@@ -53,25 +93,25 @@ asciidoctor {
     inputs.dir snippetsDir
     configurations 'asciidoctorExt'
 
-    // test -> asciidoctor 순으로 테스크가 수행된다.
-    dependsOn test
+    dependsOn test // test -> asciidoctor 순으로 테스크가 수행된다.
 
 }
 
 // bootJar: 실행 가능한 *.jar 파일을 만드는 역할을 수행한다.
 bootJar {
-    // test -> asciidoctor -> bootJar 순으로 task가 수행된다.
-    dependsOn asciidoctor
+    dependsOn asciidoctor // test -> asciidoctor -> bootJar 순으로 task가 수행된다.
 
     // asciidoctor.outputDir: '/build/docs/asciidocs'
     from("${asciidoctor.outputDir}") {
-        // asciidoctor.outputDir 폴더에 있는 파일을
-        into 'static/docs'
+        into 'static/docs' // asciidoctor.outputDir 폴더에 있는 파일을
     }
 }
 
 test {
     useJUnitPlatform()
+    outputs.dir snippetsDir // test가 끝난 결과물을 snippetsDir에 저장한다.
+    finalizedBy jacocoTestReport // 테스트 종료 이후에 레포트를 생성
+    finalizedBy 'jacocoTestCoverageVerification' // 코드 커버리지가 규칙을 통과하지 않으면 빌드를 실패시킨다.
 }
 
 
