[#7] test: jacoco coverage 60%에 맞춰서 추가 테스트 코드 작성 및 Auth 관련 인증 실패 시 401, 인가 실패 시 403 로직 추가

--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 jacocoTestCoverageVerification {
     violationRules {
         rule {
-            enabled = false
+            enabled = true
             element = 'CLASS'
 
             limit {
