--- a/.github/workflows/ci-on-pull-request.yml
+++ b/.github/workflows/ci-on-pull-request.yml
@@ -1,8 +1,8 @@
-# Build With RestDocs
-name: CI On Push
+# Build With testCoverage
+name: CI On PullRequest
 
 on:
-  push:
+  pull_request:
     branches: [ "develop" ]
 
 jobs:
@@ -22,8 +22,12 @@ jobs:
         run: chmod +x ./gradlew
         shell: bash
 
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Build without test
+        run: ./gradlew build -x test
+        shell: bash
+
+      - name: Test with Jacoco
+        run: ./gradlew testWithJacoco
         shell: bash
 
 
