[#7] feat: Pull Request에서 Coverage 보이게 하는 CI 전략 추가

--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,8 @@ jacocoTestReport {
     reports {
         html.required = true
         html.outputLocation = file("$buildDir/jacoco/index.html")
-        // file("$buildDir/myOutput.txt")
+        xml.required = true
+        xml.outputLocation = file("$buildDir/jacoco/index.xml")
     }
     afterEvaluate {
         classDirectories.setFrom(
