--- a/.github/workflows/ci-on-pull-request.yml
+++ b/.github/workflows/ci-on-pull-request.yml
@@ -26,6 +26,16 @@ jobs:
         run: ./gradlew testWithJacoco
         shell: bash
 
+      - name: Add Coverage To Pull Request
+        id: jacoco
+        uses: madrapps/jacoco-report@v1.3
+        with:
+          paths: ${{ github.workspace }}/build/reports/jacoco/index.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
+          min-coverage-overall: 40
+          min-coverage-changed-files: 60
+
+
 
 
 
