--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -67,7 +67,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: '.'
+          name: docs
+          path: index.html
 
       - name: Deploy to GitHub Pages
         id: deployment
