--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -68,7 +68,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           name: docs
-          path: '.'
+          path: index.html
 
       - name: Deploy to GitHub Pages
         id: deployment
