--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -66,9 +66,9 @@ jobs:
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
-      #        with:
-      #          name: docs
-      #          path: index.html
+        with:
+          artifact_name: docs
+          path: '.'
 
       - name: Deploy to GitHub Pages
         id: deployment
