[#8] feat: GihubPage CI 전략 테스트 중 - 17

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -67,7 +67,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          artifact_name: docs
+          #          artifact_name: docs
+          name: docs
           path: '.'
 
       - name: Deploy to GitHub Pages
