--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -48,7 +48,7 @@ jobs:
   deploy:
     needs: build
     environment:
-      name: github-pages
+      name: docs
       #      url: ${{ steps.deployment.outputs.page_url }}
       url: https://f-lab-edu.github.io/outfit-of-the-day
     runs-on: ubuntu-latest
@@ -69,13 +69,11 @@ jobs:
         with:
           #          artifact_name: docs
           name: docs
-          path: '.'
+          path: index.html
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        with:
-          artifact_name: docs
 
 
 
