--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -67,9 +67,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          #          artifact_name: docs
           name: docs
-          path: index.html
+          path: '.'
 
       - name: Deploy to GitHub Pages
         id: deployment
