[#8] feat: GihubPage CI 전략 테스트 중 - 22

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -73,6 +73,9 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        with:
+          name: docs
+          path: '.'
 
 
 
