[#8] feat: GihubPage CI 전략 테스트 중 - 23

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -75,7 +75,7 @@ jobs:
         uses: actions/deploy-pages@v2
         with:
           name: docs
-          path: '.'
+          path: index.html
 
 
 
