--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -74,8 +74,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v2
         with:
-          name: docs
-          path: index.html
+          artifact_name: docs
 
 
 
