[#8] feat: GihubPage CI 전략 테스트 중 - 27

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -48,8 +48,7 @@ jobs:
   deploy:
     needs: build
     environment:
-      name: docs
-      #      url: ${{ steps.deployment.outputs.page_url }}
+      name: github-pages
       url: https://f-lab-edu.github.io/outfit-of-the-day
     runs-on: ubuntu-latest
     steps:
