[#8] feat: GihubPage CI 전략 테스트 중 - 28

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -60,6 +60,9 @@ jobs:
         with:
           name: docs
 
+      - name: console
+        run: ls -al
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
