--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -66,17 +66,20 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
+      - name: console2
+        run: ls -al
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          name: docs
           path: '.'
+
+      - name: console2
+        run: ls -al
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        with:
-          artifact_name: docs
 
 
 
