--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: console0
+        run: ls -al
+
       - name: Download a docs file
         uses: actions/download-artifact@v3
         with:
