--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -55,16 +55,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: console0
-        run: ls -al
-
       - name: Download a docs file
         uses: actions/download-artifact@v3
         with:
           name: docs
-
-      - name: console
-        run: ls -al
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -75,7 +69,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: '.'
+          #          path: '.'
+          path: index.html
 
       - name: console2
         run: ls -al
