--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -70,7 +70,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           #          path: '.'
-          path: index.html
+          path: './index.html'
 
       - name: console2
         run: ls -al
