[#8] feat: GihubPage CI 전략 테스트 중 - 33

--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -73,7 +73,7 @@ jobs:
           path: './index.html'
 
       - name: console2
-        run: ls -al
+        run: cat ./index.html
 
       - name: Deploy to GitHub Pages
         id: deployment
