--- a/.github/workflows/ci-docs.yml
+++ b/.github/workflows/ci-docs.yml
@@ -1,19 +1,17 @@
 # Build With RestDocs
-name: CI On Push
+name: CI on push
 
 on:
   push:
     branches: [ "feat/jongwan/github-page" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -44,12 +42,13 @@ jobs:
         with:
           name: docs
           path: build/docs/asciidoc/index.html
-  # Single deploy job since we're just deploying
+
+
   deploy:
     needs: build
     environment:
       name: github-pages
-      url: https://f-lab-edu.github.io/outfit-of-the-day
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -63,16 +62,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-      - name: console2
-        run: ls -al
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: '.'
-
-      - name: console2
-        run: cat ./index.html
 
       - name: Deploy to GitHub Pages
         id: deployment
