[#8] feat: GihubPage에 rest docs 배포 관련 작업 ci-on-push.yml에 반영 완료

--- a/.github/workflows/ci-on-push.yml
+++ b/.github/workflows/ci-on-push.yml
@@ -1,9 +1,20 @@
 # Build With RestDocs
-name: CI On Push
+name: CI on push
 
 on:
   push:
     branches: [ "develop" ]
+
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   build:
@@ -25,6 +36,41 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
         shell: bash
+
+      - name: Upload output file
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: build/docs/asciidoc/index.html
+
+
+  deploy:
+    needs: build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Download a docs file
+        uses: actions/download-artifact@v3
+        with:
+          name: docs
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: '.'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
+
 
 
 
