[#11] feature: logback 관련 초기 셋팅 및 appender 분리 작업

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,9 +26,11 @@ spring:
       path: /h2-console
       enabled: true
 
-logging.level:
-  org.hibernate.sql: debug
-  org.apache.coyote.http11: debug
+logging:
+  config: classpath:logback-spring.xml
+  level:
+    org.hibernate.sql: debug
+    org.apache.coyote.http11: debug
 
 security:
   encryption:
