--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.3'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
     id "jacoco"
+    id "io.sentry.jvm.gradle" version "3.14.0"
 }
 
 ext {
@@ -44,6 +45,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     implementation 'mysql:mysql-connector-java:8.0.23'
+    implementation 'io.sentry:sentry-logback:6.33.0'
 }
 
 
@@ -122,4 +124,9 @@ jacocoTestCoverageVerification {
 }
 
 
-
+sentry {
+    includeSourceContext = true
+    org = "ootd-test"
+    projectName = "outfit-of-the-day"
+    authToken = System.getenv("SENTRY_AUTH_TOKEN")
+}
