[#11] refactor: logback profile별 파일 분리 및 공통 property 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,10 +27,7 @@ spring:
       enabled: true
 
 logging:
-  config: classpath:logback-spring.xml
-  level:
-    org.hibernate.sql: debug
-    org.apache.coyote.http11: debug
+  config: classpath:logback/logback-local.xml
 
 security:
   encryption:
