[None] chore: jacocoTestCoverageVerification exception, response directory excludes에 추가

--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,8 @@ jacocoTestCoverageVerification {
             excludes = [
                     '*.*Application',
                     '*.*ExceptionHandler',
+                    '**.exception.**',
+                    '**.response.**',
                     '**.util.**'
             ]
         }
