--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.3'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
     id "jacoco"
+    id "com.gorylenko.gradle-git-properties" version "2.4.1" // actuator - 최신 깃 커밋 정보 접근
 }
 
 ext {
@@ -38,6 +39,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator' // actuator 추가
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
@@ -117,8 +119,18 @@ jacocoTestCoverageVerification {
             excludes = [
                     '*.*Application',
                     '*.*ExceptionHandler',
+                    '**.exception.**',
+                    '**.response.**',
                     '**.util.**'
             ]
         }
     }
 }
+
+
+// 빌드 정보 actuator에 추가
+// META_INF/build-info.properties 가 생성됨
+springBoot {
+    buildInfo()
+}
+
