[#13] refactor: 테스트 커버리지 대상에서 Config 파일 제외

--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ jacocoTestReport {
                             '**/request/**',
                             '**/response/**',
                             '**/util/**'
+
                     ])
                 })
         )
@@ -121,7 +122,8 @@ jacocoTestCoverageVerification {
                     '*.*ExceptionHandler',
                     '**.exception.**',
                     '**.response.**',
-                    '**.util.**'
+                    '**.util.**',
+                    '*.*Config'
             ]
         }
     }
