--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,7 @@ jacocoTestReport {
                             '**/*Exception*',
                             '**/request/**',
                             '**/response/**',
-                            '**/util/**'
+                            '**/UriPrefix*'
 
                     ])
                 })
@@ -122,7 +122,7 @@ jacocoTestCoverageVerification {
                     '*.*ExceptionHandler',
                     '**.exception.**',
                     '**.response.**',
-                    '**.util.**',
+                    '*.UriPrefix',
                     '*.*Config'
             ]
         }
