[None] refactor: 테스트 제외 대상에 Config 파일 추가

--- a/build.gradle
+++ b/build.gradle
@@ -93,6 +93,7 @@ jacocoTestReport {
                 files(classDirectories.files.collect {
                     fileTree(dir: it, excludes: [
                             '**/*Application*',
+                            '**/*Config*',
                             '**/*Exception*',
                             '**/request/**',
                             '**/response/**',
