--- a/build.gradle
+++ b/build.gradle
@@ -23,16 +23,16 @@ jacoco {
 group = 'study'
 version = '0.0.1-SNAPSHOT'
 
+repositories {
+
+    mavenCentral()
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
     asciidoctorExt // asciidoctor extension에 대한 설정을 넣어준다.
-}
-
-repositories {
-
-    mavenCentral()
 }
 
 dependencies {
@@ -41,6 +41,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-actuator' // actuator 추가
     implementation 'io.micrometer:micrometer-registry-prometheus' // 마이크로미터 프로메테우스 구현 라이브러리 추가
+
+    //querydsl
+    // == 스프링 부트 3.0 이상 ==
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
@@ -136,5 +144,19 @@ jacocoTestCoverageVerification {
 // META_INF/build-info.properties 가 생성됨
 springBoot {
     buildInfo()
+}
+
+def querydslDir = "$buildDir/generated/querydsl"
+
+sourceSets {
+    main.java.srcDirs += [querydslDir]
+}
+
+tasks.withType(JavaCompile) {
+    options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
+}
+
+clean.doLast {
+    file(querydslDir).deleteDir()
 }
 
